--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
     "@angular/compiler": "~10.1.4",
     "@angular/core": "~10.1.4",
     "@angular/forms": "~10.1.4",
+    "@angular/localize": "~10.1.4",
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
+    "bootstrap": "^4.6.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
